# spica

./: .env  .gitignore  Dockerfile  README.md  build.sh  package.json  typechain.config.json
artifacts/: ido.contract  ido.json  ido_factory.contract  ido_factory.json  proxy.contract  proxy.json  stable_coin_contract.contract  stable_coin_contract.json  staking.contract  staking.json  test.contract  test.json  token.contract  token.json  token_factory.contract  token_factory.json
contracts/: Makefile  deploy.sh
contracts/callee-contract/: Cargo.toml  lib.rs
contracts/caller-contract/: Cargo.toml  lib.rs
contracts/ido/: Cargo.toml  ido.rs  lib.rs  traits.rs  types.rs
contracts/ido_factory/: Cargo.toml  factory.rs  helpers.rs  lib.rs  traits.rs  types.rs
contracts/logics/: Cargo.toml
contracts/logics/traits/: common.rs  mod.rs  staking.rs  token.rs
contracts/proxy/: Cargo.toml  lib.rs
contracts/stable_coin/: Cargo.toml  lib.rs
contracts/staking/: Cargo.toml  Makefile  addresses.json  helpers.rs  lib.rs  setup.sh
contracts/token/: Cargo.toml  lib.rs  setup.sh
contracts/token_factory/: Cargo.toml  lib.rs
scripts/: deploy.ts
tasks/: verifier.ts
