[package]
name = "staking"
version = "0.1.0"
authors = ["Cuong <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "=4.2.1", default-features = false}
token = { path = "../token", default-features = false, features = ["ink-as-dependency"] }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.1", default-features = false, features = ["psp22", "ownable"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "staking"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "token/std",
]
ink-as-dependency = []

