[package]
name = "staking"
version = "0.1.0"
authors = ["Cuong Sotatek"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
ink = { version = "4.2.0", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.1", default-features = false, features = ["psp22", "ownable", "pausable"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7", default-features = false, features = ["derive"], optional = true }
logics = { path = "../logics", default-features = false }
token = { path = "../token", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "4.2.0" }

[lib]
name = "staking"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "logics/std",
    "token/std",
]
ink-as-dependency = []
e2e-tests = []